--- a/picom.conf
+++ b/picom.conf
@@ -18,13 +18,13 @@ unredir-if-possible = true;
 #resize-damage = 7;
 vsync = true;
 
-corner-radius = 14.0;
+corner-radius = 7.0;
 round-borders = 1;
 rounded-corners-exclude = [
   "class_g = 'dunst'",
   "class_g = 'Polybar'",
   "class_g = 'Rofi'", 
-  "QTILE_INTERNAL:32c = 1"
+  # "QTILE_INTERNAL:32c = 1"
   #"! name~=''", 
 ];
 rounded-borders-exclude = [
@@ -40,7 +40,7 @@ shadow = true;			# Enabled client-side shadows on windows.
 shadow-radius = 38;		# The blur radius for shadows. (default 38*)
 shadow-offset-x = -40;		# The left offset for shadows. (default -15)
 shadow-offset-y = -20;		# The top offset for shadows. (default -15)
-shadow-opacity = 0.45;
+shadow-opacity = 0.35;
 shadow-exclude = [
  #"class_g = 'Plank'",
  #"! name~=''",
