--- a/picom.conf
+++ b/picom.conf
@@ -24,7 +24,7 @@ rounded-corners-exclude = [
   "class_g = 'dunst'",
   "class_g = 'Polybar'",
   "class_g = 'Rofi'", 
-  # "QTILE_INTERNAL:32c = 1"
+  #"QTILE_INTERNAL:32c = 1"
   #"! name~=''", 
 ];
 rounded-borders-exclude = [
@@ -40,25 +40,8 @@ shadow = true;			# Enabled client-side shadows on windows.
 shadow-radius = 38;		# The blur radius for shadows. (default 38*)
 shadow-offset-x = -40;		# The left offset for shadows. (default -15)
 shadow-offset-y = -20;		# The top offset for shadows. (default -15)
-shadow-opacity = 0.35;
-shadow-exclude = [
- #"class_g = 'Plank'",
- #"! name~=''",
- #"class_g = 'conky'",
- #"name = 'cpt_frame_window'",
- #"class_g = 'slop'",
- #"name = 'lead'",
- #"name = 'Eww - border1'",
- #"name = 'Eww - border2'",
- ##"name = 'Eww - border'",
- #"class_g = 'firefox' && argb",
- ##"QTILE_INTERNAL:32c = 1",
- #"class_g = 'i3lock'",
- #"class_g = 'stalonetray'",
- ##"name = 'polybar-bar_DP-4'",
- #"name = 'Polybar tray window'",
- #"name = 'polybar-tray_DP-4'"
-];
+shadow-opacity = 0.45;
+shadow-exclude = [];
 
 # Fading
 fading = true; # Fade windows during opacity changes.
@@ -100,14 +83,14 @@ blur-background-exclude = [
 ]
 
 # Animation settings
-transition-length = 300;
-transition-pow-x = 0.7;
-transition-pow-y = 0.7;
-transition-pow-w = 0.7;
-transition-pow-h = 0.7;
-size-transition = true;
+# transition-length = 100;
+# transition-pow-x = 0.5;
+# transition-pow-y = 0.5;
+# transition-pow-w = 0.5;
+# transition-pow-h = 0.5;
+# size-transition = true;
 
-animations = true;
+animations = false;
 animation-for-open-window = "none";
 animation-delta = 100;
 
