--- a/picom.conf
+++ b/picom.conf
@@ -21,13 +21,11 @@ vsync = true;
 corner-radius = 7.0;
 round-borders = 1;
 rounded-corners-exclude = [
-  "class_g = 'dunst'",
   "class_g = 'Polybar'",
-  #"QTILE_INTERNAL:32c = 1"
+  "QTILE_INTERNAL:32c = 1"
   #"! name~=''", 
 ];
 rounded-borders-exclude = [
-  "class_g = 'dunst'",
   "class_g = 'Polybar'",
   #"QTILE_INTERNAL:32c = 1"
   #"! name~=''", 
