--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Dracula
+gtk-theme-name=Nordic-darker
 gtk-icon-theme-name=ePapirus-Dark
 gtk-font-name=Cantarell 11
 gtk-cursor-theme-name=Breeze
