--- a/fusuma/config.yml
+++ b/fusuma/config.yml
@@ -18,7 +18,7 @@ swipe:
     up:
       command: "xdotool key ctrl+alt+Down" # Switch to next workspace
     down:
-      command: "xdotool key ctrl+alt+Up" # Switch to previous workspace
+      command: "python3 /home/jonalm/scripts/qtile/bar_menus/main_menu.py"
 pinch:
   in:
     command: "xdotool keydown ctrl click 4 keyup ctrl" # Zoom in
