--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -665,8 +665,8 @@ colors: *Nord
 # Key bindings
 key_bindings:
     # (Windows, Linux, and BSD only)
-  - { key: V,         mods: Control,       action: Paste                       }
-  - { key: C,         mods: Control,       action: Copy                        }
+    #- { key: V,         mods: Control,       action: Paste                       }
+    #- { key: C,         mods: Control,       action: Copy                        }
   - { key: Insert,    mods: Shift,         action: PasteSelection              }
   - { key: Key0,      mods: Control,       action: ResetFontSize               }
   - { key: Equals,    mods: Control,       action: IncreaseFontSize            }
