--- a/picom.conf
+++ b/picom.conf
@@ -22,7 +22,7 @@ corner-radius = 7.0;
 round-borders = 1;
 rounded-corners-exclude = [
   "class_g = 'Polybar'",
-  # "QTILE_INTERNAL:32c = 1"
+  "QTILE_INTERNAL:32c = 1"
   #"! name~=''", 
 ];
 rounded-borders-exclude = [
