--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,8 +1,8 @@
 [Settings]
 gtk-theme-name=Nordic-darker
-gtk-icon-theme-name=ePapirus-Dark
+gtk-icon-theme-name=Arc
 gtk-font-name=Cantarell 11
-gtk-cursor-theme-name=Breeze
+gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
