--- a/picom.conf
+++ b/picom.conf
@@ -18,16 +18,18 @@ unredir-if-possible = true;
 #resize-damage = 7;
 vsync = true;
 
-corner-radius = 7.0;
+corner-radius = 10.0;
 round-borders = 1;
 rounded-corners-exclude = [
   "class_g = 'Polybar'",
-  "QTILE_INTERNAL:32c = 1"
+  "QTILE_INTERNAL:32c = 1",
+  "class_g = 'Dunst'",
+  "class_g = 'Rofi'"
   #"! name~=''", 
 ];
 rounded-borders-exclude = [
   "class_g = 'Polybar'",
-  #"QTILE_INTERNAL:32c = 1"
+  "QTILE_INTERNAL:32c = 1"
   #"! name~=''", 
 ]
 
@@ -36,11 +38,23 @@ shadow = true;			# Enabled client-side shadows on windows.
 shadow-radius = 38;		# The blur radius for shadows. (default 38*)
 shadow-offset-x = -40;		# The left offset for shadows. (default -15)
 shadow-offset-y = -20;		# The top offset for shadows. (default -15)
-shadow-opacity = 0.45;
+shadow-opacity = 0.55
+# shadow-opacity = 0.47;
 shadow-exclude = [];
 
+
+ #Shadow
+# shadow = true;			# Enabled client-side shadows on windows.
+# shadow-radius = 38;		# The blur radius for shadows. (default 38*)
+# shadow-offset-x = -40;		# The left offset for shadows. (default -15)
+# shadow-offset-y = -20;		# The top offset for shadows. (default -15)
+# shadow-opacity = 0.45;
+# shadow-exclude = [];
+
+
+
 # Fading
-fading = true; # Fade windows during opacity changes.
+fading = false; # Fade windows during opacity changes.
 fade-delta = 5; # The time between steps in a fade in milliseconds. (default 10).
 fade-in-step = 0.07; # Opacity change between steps while fading in. (default 0.028).
 fade-out-step = 0.07; # Opacity change between steps while fading out. (default 0.03).
@@ -66,7 +80,7 @@ opacity-rule = [
 
 # Blur
 #blur-method = "";
-blur-strength = 10;
+blur-strength = 1;
 blur-background = false;
 #blur-background-frame = true;
 blur-background-fixed = false;
