--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -124,7 +124,8 @@ multiplier = 3
 
 [window]
 dynamic_padding = false
-opacity = 0.95
+opacity = 0.9
+#opacity = 0.9d5
 title = "Alacritty"
 
 [window.class]
