--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -22,7 +22,7 @@ white = "#E5E9F0"
 yellow = "#EBCB8B"
 
 [colors.primary]
-background = "#2E3440"
+background = "#23272e"
 foreground = "#D8DEE9"
 
 [env]
