--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,11 +1,11 @@
 [Settings]
-gtk-theme-name=Nordic-darker
-gtk-icon-theme-name=Arc
-gtk-font-name=Cantarell 11
+gtk-theme-name=WhiteSur-Dark-solid
+gtk-icon-theme-name=Adwaita
+gtk-font-name=SF Pro Rounded 10
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-toolbar-icon-size=GTK_ICON_SIZE_MENU
 gtk-button-images=1
 gtk-menu-images=1
 gtk-enable-event-sounds=1
