--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -43,6 +43,7 @@ shadow-opacity = 0.45;
 # shadow-opacity = 0.47;
 shadow-exclude = [
   "class_g = 'firefox'",
+  "QTILE_INTERNAL:32c = 1",
 ];
 
 
@@ -84,7 +85,7 @@ opacity-exclude = [
 
 # Blur
 # blur-method = "";
-blur-strength = 4;
+blur-strength = 7;
 # blur-background = true;
 # blur-background-frame = false;
 # blur-background-fixed = true;
