--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -17,7 +17,8 @@ unredir-if-possible = true;
 #resize-damage = 7;
 vsync = true;
 
-corner-radius = 14.0;
+corner-radius = 10.0;
+# corner-radius = 14.0;
 round-borders = 1;
 
 rounded-corners-exclude = [
