--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -23,7 +23,7 @@ round-borders = 1;
 
 rounded-corners-exclude = [
   "class_g = 'Polybar'",
-  # "QTILE_INTERNAL:32c = 1",
+  "QTILE_INTERNAL:32c = 1",
   # "class_g = 'Dunst'",
   "class_g = 'Rofi'",
   #"! name~=''", 
