--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -30,7 +30,7 @@ rounded-corners-exclude = [
 ];
 rounded-borders-exclude = [
   "class_g = 'Polybar'",
-  # "QTILE_INTERNAL:32c = 1"
+  "QTILE_INTERNAL:32c = 1"
   #"! name~=''", 
 ]
 
