--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -29,7 +29,7 @@ rounded-corners-exclude = [
   #"! name~=''", 
 ];
 rounded-borders-exclude = [
-  "class_g = 'Polybar'",
+  "class_g = 'Nautilus'",
   "QTILE_INTERNAL:32c = 1"
   #"! name~=''", 
 ]
@@ -43,6 +43,7 @@ shadow-opacity = 0.45;
 
 # shadow-opacity = 0.47;
 shadow-exclude = [
+  "class_g = 'Nautilus'",
   "class_g = 'firefox'",
   "QTILE_INTERNAL:32c = 1",
 ];
@@ -76,6 +77,7 @@ detect-client-opacity = true; # This prevents opacity being ignored for some app
 opacity-rule = [
   #"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
   #"40:class_g = 'Bspwm' && 
+  "0:class_g = 'Nautilus'",
   "40:class_i = 'presel_feedback'",
 ];
 
