--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -45,7 +45,7 @@ shadow-opacity = 0.45;
 shadow-exclude = [
   "class_g = 'Nautilus'",
   "class_g = 'firefox'",
-  "QTILE_INTERNAL:32c = 1",
+  # "QTILE_INTERNAL:32c = 1",
 ];
 
 
